--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "http": "0.0.0",
     "path": "^0.12.7",
+    "socket.io": "^2.0.4",
     "twilio": "^3.11.3"
   },
   "devDependencies": {},
