--- a/public/bower.json
+++ b/public/bower.json
@@ -15,6 +15,8 @@
     "angular-ui-router": "0.3.2",
     "angular-material": "^1.0.9",
     "angular-bootstrap": "2.5.0",
-    "angular-bootstrap-toggle": "^0.1.3"
+    "angular-bootstrap-toggle": "^0.1.3",
+    "angular-flash-alert": "^2.4.0",
+    "angular-loading-bar": "^0.9.0"
   }
 }
